# Pricing-Agent2

./: .env.example  .env.production.template  .gitignore  ADMIN_ACCESS.md  APP_ASSESSMENT_REPORT.md  CLAUDE.md  DATA_INGESTION_FEATURE.md  DATA_PIPELINE_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DOCKER_VS_LOCAL.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.django.simple  Dockerfile.fastapi  LOCAL_SETUP_SUCCESS.md  Makefile  PHASE_4_5_ENTERPRISE_ADVANCED_PLAN.md  PLAN.md  PRICING_ANALYTICS_PLAN.md  PROJECT_ASSESSMENT_DECEMBER_2024.md  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_START_LOCAL.md  README.md  ROADMAP_PHASE4_5.md  TESTING.md  TEST_RESULTS.md  WINDOWS_SCRIPTS_README.md  apply-migrations.bat  check_new_prices.py  cleanup_test_data.py  conftest.py  create_additional_test_data.py  create_test_data.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.windows.yml  docker-start.bat  docker-stop.bat  (+34 more)
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  monitoring.yml
django_app/: Dockerfile.prod  MAPPING_FIX_SUMMARY.md  create_test_upload.py  manage.py
django_app/apps/: __init__.py
django_app/pricing_agent/: asgi.py  celery_app.py  settings.py  settings_dev.py  settings_local.py  settings_production.py  urls.py  urls_simple.py  wsgi.py
django_app/templates/: base.html  base_modern.html  dashboard.html  dashboard_old.html  index.html
django_app/tests/: __init__.py  base.py
docs/: API_SPECIFICATION.md  DEVELOPMENT_ROADMAP.md
docs/architecture/: API_ARCHITECTURE_SUMMARY.md  redis_caching_strategy.py
docs/assessments/: CLEANUP_SUMMARY.md
docs/compliance/: GDPR_Compliance_Documentation.md  SOC2_Type_II_Documentation.md
docs/deployment/: DevOps-README.md  backup_recovery_strategy.md  deployment_and_tuning.md
docs/development/: DOCKER_WINDOWS_GUIDE.md  NEXT_STEPS_ROADMAP.md  WINDOWS_LOCAL_SETUP.md
docs/features/: ANALYTICS_FEATURES.md  DATA_INTEGRATION_PIPELINE.md  PRICE_HISTORY_IMPLEMENTATION.md  PROCUREMENT_MODULES_IMPLEMENTATION_GUIDE.md
docs/phase-plans/: PHASE2_CELERY_PLAN.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE_3_5_DETAILED_IMPLEMENTATION_PLAN.md
docs/security/: Incident_Response_Playbook.md
fastapi_ml/: README.md  config.py  dependencies.py  main.py  requirements.txt
fastapi_ml/api/: websockets.py
fastapi_ml/deployment/: production.yml
fastapi_ml/models/: __init__.py  schemas.py
fastapi_ml/services/: __init__.py  data_pipeline.py  feature_engineering.py  ml_service.py  model_registry.py  monitoring.py  optimization.py  training_pipeline.py
fastapi_ml/tests/: __init__.py  conftest.py
infrastructure/docker/archive/: Dockerfile.django  Dockerfile.fastapi  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
infrastructure/k8s/: celery.yaml  configmaps.yaml  django.yaml  fastapi.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
migrations/: 000_migration_framework.sql  001_initial_schema.sql  002_pricing_and_timeseries.sql  003_workflow_tables.sql  004_contracts_and_audit.sql  005_ml_and_analytics.sql
requirements/: base.txt  development.txt  ml.txt  production.txt  testing.txt
scripts/: backup_manager.py  deploy.sh  health_monitor.py  make_scripts_executable.sh  security_scan.py  setup-dev-environment.sh
test_data/: edge_cases.csv  fuzzy_matching_test.csv  valid_purchase_orders.csv
tests/automation/: test_runner.py
(+253 files in other folders)
